tests/errors/operators/shift_overflow.sad
show(1 << 1000000000000000000)
